Refactoring services